<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="enter_something">Enter something</string>
    <string name="display">DISPLAY</string>
    <string name="show">Display what user enters</string>
    <string name="disabled">disabled</string>
    <string name="enabled">enabled</string>
    <string name="radiobuttonmale">Male</string>
    <string name="radiobuttonfemale">Female</string>
</resources>