<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/display" />

    

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/enter_something" />
        
    </LinearLayout>
    <TextView
        android:id="@+id/textViewDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show"/>

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioButton
            android:id="@+id/radioButtonGenderMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobuttonmale" />

        <RadioButton
            android:id="@+id/radioButtonGenderFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobuttonfemale" />

    </RadioGroup>

    <ToggleButton
        android:id="@+id/toggleButtonEnabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="togglebutton"
        android:textOff="@string/disabled"
        android:textOn="@string/enabled" />
</LinearLayout>
